--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p class="text-gray-200">Access all organisational forms in one place</p>
     </div>
     <div>
-      <img src="C:\Users\FM LLEE - Tuvalu\Desktop\LLT Online Portal\LLEE_Horizontal_Inverse_TUVALU_S.png" alt="Organisation Logo" class="h-12 w-auto" />
+      <img src="team-portal/LLEE_Vertical_Inverse_TUVALU_L.png" alt="Organisation Logo" class="h-12 w-auto" />
     </div>
   </header>
  -->
@@ -98,3 +98,4 @@
 
 
 <!-- Repeat the same structure for Admin, Finance, Procurement, and Governance pages -->
+
