--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p class="text-gray-200">Access all organisational forms in one place</p>
     </div>
     <div>
-      <img src="LLEE_Vertical_Inverse_TUVALU_L.png" alt="Organisation Logo" class="h-12 w-auto" />
+      <img src="https://livelearntuvalu.github.io/team-portal/LLEE_Vertical_Inverse_TUVALU_L.png" alt="Organisation Logo" class="h-12 w-auto" />
     </div>
   </header>
  -->
@@ -98,5 +98,6 @@
 
 
 <!-- Repeat the same structure for Admin, Finance, Procurement, and Governance pages -->
+
 
 
