--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <header class="bg-teal-900 text-white p-6 shadow-lg flex items-center justify-between">
   <div class="flex items-center space-x-4">
-    <img src="C:\Users\FM LLEE - Tuvalu\Desktop\LLT Online Portal\LLEE_Horizontal_Inverse_TUVALU_S.png" alt="Organisation Logo" class="h-14 w-auto" />
+    <img src="https://raw.githubusercontent.com/livelearntuvalu/team-portal/refs/heads/main/LLEE_Vertical_Inverse_TUVALU_L.png" alt="Organisation Logo" class="h-14 w-auto" />
     <div>
       <h1 class="text-2xl font-bold">Live & Learn Tuvalu</h1>
       <p class="text-gray-200 text-sm">Staff Online Portal</p>
@@ -98,6 +98,7 @@
 
 
 <!-- Repeat the same structure for Admin, Finance, Procurement, and Governance pages -->
+
 
 
 
