--- a/hr.html
+++ b/hr.html
@@ -13,7 +13,7 @@
 <body class="bg-gray-100 font-sans">
   <header class="bg-teal-900 text-white p-6 shadow-lg flex justify-between items-center">
     <h1 class="text-2xl font-bold">HR Forms</h1>
-    <img src="C:\Users\FM LLEE - Tuvalu\Desktop\LLT Online Portal\LLEE_Horizontal_Inverse_TUVALU_S.png" alt="Organisation Logo" class="h-12 w-auto" />
+    <img src="https://raw.githubusercontent.com/livelearntuvalu/team-portal/refs/heads/main/LLEE_Vertical_Inverse_TUVALU_L.png" alt="Organisation Logo" class="h-12 w-auto" />
   </header>
   <nav class="bg-teal-800 text-white p-4 flex justify-center space-x-6">
     <a href="index.html" class="hover:underline">Home</a>
@@ -50,4 +50,5 @@
   </main>
 </body>
 </html>
+
 
